Fix myListTitle on mobile and footer

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -121,5 +121,6 @@
   .disclaimer,
   .disclaimer a {
     font-size: .9rem;
+    margin-bottom: 80px;
   }
 }
