--- a/src/pages/MyList.module.css
+++ b/src/pages/MyList.module.css
@@ -45,6 +45,6 @@
   }
 
   .myListCards {
-    margin-top: 10px;
+    margin-top: 20px;
   }
 }
